# llm_doc_parser

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 000-template.md  001-use-pydantic-v2.md  002-docling-parser.md  003-semantic-chunking.md  004-embedding-vectorstore-abstraction.md  005-qdrant-openai-production.md  006-rag-pipeline.md  007-llm-streaming.md  008-fastapi-docker.md
src/llm_doc_parser/: __init__.py  base.py  chunker.py  models.py  prompt_engine.py  rag_pipeline.py  tokenizer.py
src/llm_doc_parser/api/: main.py  schemas.py
src/llm_doc_parser/embeddings/: __init__.py  base.py  openai_embedder.py  zhipu_embedder.py
src/llm_doc_parser/llm/: __init__.py  base.py  glm_llm.py  openai_llm.py
src/llm_doc_parser/parsers/: __init__.py  base.py  docling_parser.py
src/llm_doc_parser/prompts/: rag_qa.jinja2
src/llm_doc_parser/vectorstore/: base.py  memory_store.py  qdrant_store.py
src/project_template/: __init__.py  models.py
tests/: test_chunker.py  test_docling_parser.py  test_llm_glm.py  test_llm_openai.py  test_models.py  test_qdrant_store.py  test_rag_pipeline.py  test_vectorstore_contract.py  test_zhipu_embedder.py
