[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-template"
version = "0.1.0"
description = "Template repository for Python projects with CI and quality gates"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.0,<3",
    "pydantic>=2.0",
    "tiktoken>=0.7,<1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_doc_parser"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "--cov=llm_doc_parser --cov-report=term-missing --cov-fail-under=60"
