[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-doc-parser"
version = "0.1.0"
description = "Production-ready document parsing and RAG Q&A system with Docling, Qdrant, and FastAPI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.0,<3",
    "fastapi>=0.136.3",
    "jinja2>=3.1,<4",
    "openai>=1.30,<2",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.1",
    "qdrant-client>=1.9,<2",
    "tenacity>=8.3,<9",
    "tiktoken>=0.7,<1",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_doc_parser"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
strict = true
explicit_package_bases = true
mypy_path = "src"
exclude = ["^(venv|\\.venv)/"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = ""
markers = [
    "integration: downloads ML models or needs network (skip in CI)",
]
